--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ button {
   font-size: 14px;
   border-radius: 4px;
   padding: 5px 15px;
+  border: none;
+}
+
+button:hover {
+  background: #cacaca;
 }
 
 select {
